--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "kreait/firebase-php": "^7.18",
         "kreait/laravel-firebase": "^6.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "symfony/http-client": "*",
+        "symfony/mailgun-mailer": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
